unpackaged/main/default/objects/Plan_intervention__c/Plan_intervention__c.object-meta.xml
<CustomObject>
    <label>Plan intervention</label>
    <nameField>
        <displayFormat>PI-{00000000}</displayFormat>
        <label>Plan d&apos;intervention</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plans intervention</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>