unpackaged/main/default/objects/Plan_intervention__c/fields/Dossier_de_prise_en_charge__c.field-meta.xml
<CustomField>
    <fullName>Dossier_de_prise_en_charge__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dossier de prise en charge</label>
    <referenceTo>Dossier_de_prise_en_charge__c</referenceTo>
    <relationshipLabel>Plans d&apos;intervention</relationshipLabel>
    <relationshipName>Plans_intervention</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>