unpackaged/main/default/objects/Plan_intervention__c/fields/Objectifs__c.field-meta.xml
<CustomField>
    <fullName>Objectifs__c</fullName>
    <label>Objectifs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>