unpackaged/main/default/objects/Plan_intervention__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plans intervention</relationshipLabel>
    <relationshipName>Plans_intervention</relationshipName>
    <type>Lookup</type>
</CustomField>