unpackaged/main/default/objects/Plan_intervention__c/fields/Problemes_identifies__c.field-meta.xml
<CustomField>
    <fullName>Problemes_identifies__c</fullName>
    <label>Problèmes identifiés</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>