unpackaged/main/default/objects/Plan_intervention__c/fields/Remarque_inf_ref__c.field-meta.xml
<CustomField>
    <fullName>Remarque_inf_ref__c</fullName>
    <label>Remarque de l&apos;inf. réf.</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>