unpackaged/main/default/objects/Plan_intervention__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En préparation</fullName>
            </value>
            <value>
                <fullName>Validé</fullName>
            </value>
            <value>
                <fullName>Actif</fullName>
            </value>
            <value>
                <fullName>Clôturé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>