unpackaged/main/default/objects/Plan_intervention__c/fields/Valide_du__c.field-meta.xml
<CustomField>
    <fullName>Valide_du__c</fullName>
    <label>Valide du</label>
    <type>Date</type>
</CustomField>